--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,8 @@
 </head>
 <body>
 <h1>This is first site on GitHub</h1>
+<h2>Learning day!!</h2>
+<p> This is the amazing world of GitHub</p>
+
 </body>
 </html>
