--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html>
-<head<
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>This is my first NPM project</title>
 </head>
 <body>
-<h1>First npm project</h1>
+<h1> NPM PROJECT INFORMATION</h1>
+<p> Today we will learn about NPM and NODE JS</p>
 </body>
 </html>
